[project]
name = "apogee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcade==2.6.17",
    "choice",
    "formal-vector",
    "svgcomposer",
]

[tool.setuptools]
packages = []

[tool.uv.sources]
formal-vector = { git = "https://github.com/medthehatta/formal-vector" }
choice = { git = "https://github.com/medthehatta/choice" }
svgcomposer = { git = "https://github.com/medthehatta/svgcomposer" }
